gen/nngraphParser.py
# Generated from /Users/nimasaeidi/PycharmProjects/compiler/compiler-session2/nngraph.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class nngraphParser ( Parser ):

    grammarFileName = "nngraph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'model'", "'graph'", "'config'", "'node'", 
                     "'edge'", "'input'", "'output'", "'tensor'", "'None'", 
                     "<INVALID>", "'->'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "':'", "','", "'='", "'-'" ]

    symbolicNames = [ "<INVALID>", "MODEL", "GRAPH", "CONFIG", "NODE", "EDGE", 
                      "INPUT", "OUTPUT", "TENSOR", "NONE", "BOOL", "ARROW", 
                      "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "COLON", "COMMA", "EQ", "MINUS", "FLOAT", 
                      "INT", "STRING", "IDENTIFIER", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_modelDecl = 1
    RULE_modelItem = 2
    RULE_inputDecl = 3
    RULE_outputDecl = 4
    RULE_graphDecl = 5
    RULE_graphItem = 6
    RULE_nodeDecl = 7
    RULE_layerType = 8
    RULE_edgeDecl = 9
    RULE_edgeLabel = 10
    RULE_configDecl = 11
    RULE_configEntry = 12
    RULE_paramList = 13
    RULE_param = 14
    RULE_value = 15
    RULE_shape = 16
    RULE_number = 17

    ruleNames =  [ "program", "modelDecl", "modelItem", "inputDecl", "outputDecl", 
                   "graphDecl", "graphItem", "nodeDecl", "layerType", "edgeDecl", 
                   "edgeLabel", "configDecl", "configEntry", "paramList", 
                   "param", "value", "shape", "number" ]

    EOF = Token.EOF
    MODEL=1
    GRAPH=2
    CONFIG=3
    NODE=4
    EDGE=5
    INPUT=6
    OUTPUT=7
    TENSOR=8
    NONE=9
    BOOL=10
    ARROW=11
    LBRACE=12
    RBRACE=13
    LPAREN=14
    RPAREN=15
    LBRACK=16
    RBRACK=17
    COLON=18
    COMMA=19
    EQ=20
    MINUS=21
    FLOAT=22
    INT=23
    STRING=24
    IDENTIFIER=25
    WS=26
    LINE_COMMENT=27
    BLOCK_COMMENT=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelDecl(self):
            return self.getTypedRuleContext(nngraphParser.ModelDeclContext,0)


        def graphDecl(self):
            return self.getTypedRuleContext(nngraphParser.GraphDeclContext,0)


        def EOF(self):
            return self.getToken(nngraphParser.EOF, 0)

        def configDecl(self):
            return self.getTypedRuleContext(nngraphParser.ConfigDeclContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = nngraphParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.modelDecl()
            self.state = 37
            self.graphDecl()
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 38
                self.configDecl()


            self.state = 41
            self.match(nngraphParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(nngraphParser.MODEL, 0)

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(nngraphParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nngraphParser.RBRACE, 0)

        def modelItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nngraphParser.ModelItemContext)
            else:
                return self.getTypedRuleContext(nngraphParser.ModelItemContext,i)


        def getRuleIndex(self):
            return nngraphParser.RULE_modelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelDecl" ):
                listener.enterModelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelDecl" ):
                listener.exitModelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelDecl" ):
                return visitor.visitModelDecl(self)
            else:
                return visitor.visitChildren(self)




    def modelDecl(self):

        localctx = nngraphParser.ModelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_modelDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(nngraphParser.MODEL)
            self.state = 44
            self.match(nngraphParser.IDENTIFIER)
            self.state = 45
            self.match(nngraphParser.LBRACE)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self.modelItem()
                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==6 or _la==7):
                    break

            self.state = 51
            self.match(nngraphParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inputDecl(self):
            return self.getTypedRuleContext(nngraphParser.InputDeclContext,0)


        def outputDecl(self):
            return self.getTypedRuleContext(nngraphParser.OutputDeclContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_modelItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelItem" ):
                listener.enterModelItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelItem" ):
                listener.exitModelItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelItem" ):
                return visitor.visitModelItem(self)
            else:
                return visitor.visitChildren(self)




    def modelItem(self):

        localctx = nngraphParser.ModelItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modelItem)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.inputDecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.outputDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(nngraphParser.INPUT, 0)

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(nngraphParser.COLON, 0)

        def TENSOR(self):
            return self.getToken(nngraphParser.TENSOR, 0)

        def shape(self):
            return self.getTypedRuleContext(nngraphParser.ShapeContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_inputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputDecl" ):
                listener.enterInputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputDecl" ):
                listener.exitInputDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputDecl" ):
                return visitor.visitInputDecl(self)
            else:
                return visitor.visitChildren(self)




    def inputDecl(self):

        localctx = nngraphParser.InputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(nngraphParser.INPUT)
            self.state = 58
            self.match(nngraphParser.IDENTIFIER)
            self.state = 59
            self.match(nngraphParser.COLON)
            self.state = 60
            self.match(nngraphParser.TENSOR)
            self.state = 61
            self.shape()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT(self):
            return self.getToken(nngraphParser.OUTPUT, 0)

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return nngraphParser.RULE_outputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputDecl" ):
                listener.enterOutputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputDecl" ):
                listener.exitOutputDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputDecl" ):
                return visitor.visitOutputDecl(self)
            else:
                return visitor.visitChildren(self)




    def outputDecl(self):

        localctx = nngraphParser.OutputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_outputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(nngraphParser.OUTPUT)
            self.state = 64
            self.match(nngraphParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GRAPH(self):
            return self.getToken(nngraphParser.GRAPH, 0)

        def LBRACE(self):
            return self.getToken(nngraphParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nngraphParser.RBRACE, 0)

        def graphItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nngraphParser.GraphItemContext)
            else:
                return self.getTypedRuleContext(nngraphParser.GraphItemContext,i)


        def getRuleIndex(self):
            return nngraphParser.RULE_graphDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphDecl" ):
                listener.enterGraphDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphDecl" ):
                listener.exitGraphDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphDecl" ):
                return visitor.visitGraphDecl(self)
            else:
                return visitor.visitChildren(self)




    def graphDecl(self):

        localctx = nngraphParser.GraphDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_graphDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(nngraphParser.GRAPH)
            self.state = 67
            self.match(nngraphParser.LBRACE)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4 or _la==5:
                self.state = 68
                self.graphItem()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(nngraphParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeDecl(self):
            return self.getTypedRuleContext(nngraphParser.NodeDeclContext,0)


        def edgeDecl(self):
            return self.getTypedRuleContext(nngraphParser.EdgeDeclContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_graphItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphItem" ):
                listener.enterGraphItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphItem" ):
                listener.exitGraphItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphItem" ):
                return visitor.visitGraphItem(self)
            else:
                return visitor.visitChildren(self)




    def graphItem(self):

        localctx = nngraphParser.GraphItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_graphItem)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.nodeDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.edgeDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(nngraphParser.NODE, 0)

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(nngraphParser.COLON, 0)

        def layerType(self):
            return self.getTypedRuleContext(nngraphParser.LayerTypeContext,0)


        def LPAREN(self):
            return self.getToken(nngraphParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(nngraphParser.RPAREN, 0)

        def paramList(self):
            return self.getTypedRuleContext(nngraphParser.ParamListContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_nodeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeDecl" ):
                listener.enterNodeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeDecl" ):
                listener.exitNodeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeDecl" ):
                return visitor.visitNodeDecl(self)
            else:
                return visitor.visitChildren(self)




    def nodeDecl(self):

        localctx = nngraphParser.NodeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nodeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(nngraphParser.NODE)
            self.state = 81
            self.match(nngraphParser.IDENTIFIER)
            self.state = 82
            self.match(nngraphParser.COLON)
            self.state = 83
            self.layerType()
            self.state = 84
            self.match(nngraphParser.LPAREN)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 85
                self.paramList()


            self.state = 88
            self.match(nngraphParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return nngraphParser.RULE_layerType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayerType" ):
                listener.enterLayerType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayerType" ):
                listener.exitLayerType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayerType" ):
                return visitor.visitLayerType(self)
            else:
                return visitor.visitChildren(self)




    def layerType(self):

        localctx = nngraphParser.LayerTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_layerType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(nngraphParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EDGE(self):
            return self.getToken(nngraphParser.EDGE, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(nngraphParser.IDENTIFIER)
            else:
                return self.getToken(nngraphParser.IDENTIFIER, i)

        def ARROW(self):
            return self.getToken(nngraphParser.ARROW, 0)

        def edgeLabel(self):
            return self.getTypedRuleContext(nngraphParser.EdgeLabelContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_edgeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeDecl" ):
                listener.enterEdgeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeDecl" ):
                listener.exitEdgeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeDecl" ):
                return visitor.visitEdgeDecl(self)
            else:
                return visitor.visitChildren(self)




    def edgeDecl(self):

        localctx = nngraphParser.EdgeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_edgeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(nngraphParser.EDGE)
            self.state = 93
            self.match(nngraphParser.IDENTIFIER)
            self.state = 94
            self.match(nngraphParser.ARROW)
            self.state = 95
            self.match(nngraphParser.IDENTIFIER)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 96
                self.edgeLabel()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeLabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(nngraphParser.LBRACK, 0)

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(nngraphParser.EQ, 0)

        def STRING(self):
            return self.getToken(nngraphParser.STRING, 0)

        def RBRACK(self):
            return self.getToken(nngraphParser.RBRACK, 0)

        def getRuleIndex(self):
            return nngraphParser.RULE_edgeLabel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeLabel" ):
                listener.enterEdgeLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeLabel" ):
                listener.exitEdgeLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeLabel" ):
                return visitor.visitEdgeLabel(self)
            else:
                return visitor.visitChildren(self)




    def edgeLabel(self):

        localctx = nngraphParser.EdgeLabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_edgeLabel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(nngraphParser.LBRACK)
            self.state = 100
            self.match(nngraphParser.IDENTIFIER)
            self.state = 101
            self.match(nngraphParser.EQ)
            self.state = 102
            self.match(nngraphParser.STRING)
            self.state = 103
            self.match(nngraphParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONFIG(self):
            return self.getToken(nngraphParser.CONFIG, 0)

        def LBRACE(self):
            return self.getToken(nngraphParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nngraphParser.RBRACE, 0)

        def configEntry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nngraphParser.ConfigEntryContext)
            else:
                return self.getTypedRuleContext(nngraphParser.ConfigEntryContext,i)


        def getRuleIndex(self):
            return nngraphParser.RULE_configDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigDecl" ):
                listener.enterConfigDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigDecl" ):
                listener.exitConfigDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigDecl" ):
                return visitor.visitConfigDecl(self)
            else:
                return visitor.visitChildren(self)




    def configDecl(self):

        localctx = nngraphParser.ConfigDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_configDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(nngraphParser.CONFIG)
            self.state = 106
            self.match(nngraphParser.LBRACE)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 107
                self.configEntry()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(nngraphParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigEntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(nngraphParser.EQ, 0)

        def value(self):
            return self.getTypedRuleContext(nngraphParser.ValueContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_configEntry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigEntry" ):
                listener.enterConfigEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigEntry" ):
                listener.exitConfigEntry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigEntry" ):
                return visitor.visitConfigEntry(self)
            else:
                return visitor.visitChildren(self)




    def configEntry(self):

        localctx = nngraphParser.ConfigEntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_configEntry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(nngraphParser.IDENTIFIER)
            self.state = 116
            self.match(nngraphParser.EQ)
            self.state = 117
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nngraphParser.ParamContext)
            else:
                return self.getTypedRuleContext(nngraphParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(nngraphParser.COMMA)
            else:
                return self.getToken(nngraphParser.COMMA, i)

        def getRuleIndex(self):
            return nngraphParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = nngraphParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.param()
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 120
                    self.match(nngraphParser.COMMA)
                    self.state = 121
                    self.param() 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 127
                self.match(nngraphParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(nngraphParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(nngraphParser.EQ, 0)

        def value(self):
            return self.getTypedRuleContext(nngraphParser.ValueContext,0)


        def getRuleIndex(self):
            return nngraphParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = nngraphParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(nngraphParser.IDENTIFIER)
            self.state = 131
            self.match(nngraphParser.EQ)
            self.state = 132
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(nngraphParser.NumberContext,0)


        def BOOL(self):
            return self.getToken(nngraphParser.BOOL, 0)

        def STRING(self):
            return self.getToken(nngraphParser.STRING, 0)

        def shape(self):
            return self.getTypedRuleContext(nngraphParser.ShapeContext,0)


        def NONE(self):
            return self.getToken(nngraphParser.NONE, 0)

        def getRuleIndex(self):
            return nngraphParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):
